# django-quiz

./: README.md  pyproject.toml
src/apps/_quiz/: apps.py  forms.py  urls.py  views.py
src/apps/_quiz/migrations/: 0001_initial.py
src/apps/home/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
src/apps/home/migrations/: 0001_initial.py  0002_rename_votes_choice_selections_question_answer.py  0003_quizform.py  0004_question2_choice2.py  0005_simplequestion.py  0006_simplequestion_answers_simplequestion_title_and_more.py  0007_choice_correct.py
src/apps/home/templates/home/: _quiz.html  index.html  quiz.html  quiz_forms.html  results.html  simple_question_form.html
src/apps/quiz_test/: apps.py
src/apps/quizzes/: admin.py  emails.py  forms.py  models.py  urls.py  views.py
src/apps/quizzes/migrations/: 0001_initial.py
src/apps/quizzes/templates/quizzes/: detail.html  email.html  email.txt  index.html  quiz.html  results.html  submission.html  submit.html  success.html  test.html
src/django_quiz/: settings.py  urls.py
src/quiz/: settings.py  urls.py
src/templates/: base.html
src/templates/home/: index.html
src/templates/quizzes/: add-question.html  display.html  index.html  register.html
